--- a/Test02/Views/GiaoHang/DonDaGiao.cshtml
+++ b/Test02/Views/GiaoHang/DonDaGiao.cshtml
@@ -32,7 +32,7 @@
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Mã Đơn hàng </th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Tên đại lý</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Địa chỉ giao</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 150px; text-align: center ">Địa chỉ giao</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 80px; text-align: center ">Tình trạng thanh toán</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 80px; text-align: center ">Tình trạng giao</th>
                                 </tr>
@@ -40,7 +40,7 @@
                             <tbody>
                                 @foreach (var item in Model)
                                 {
-                                    if (item.XuatHoaDon == true && item.PhieuXuatKho == true && item.TrangThai == "Đã xét duyệt" && item.TinhTrangGH == "Đã giao hàng")
+                                    if (item.XuatHoaDon == true && item.PhieuXuatKho == true && item.TrangThai == "Đã xét duyệt" && item.TinhTrangGH == "Đã giao")
                                     {
                                         <tr>
                                             <td>
@@ -59,7 +59,9 @@
                                                 @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.TinhTrangGH)
+                                                <span class="badge bg-success" style="width:100px">
+                                                    @Html.DisplayFor(modelItem => item.TinhTrangGH)
+                                                </span>
                                             </td>
                                         </tr>
                                     }
