--- a/Test02/Views/GiaoHang/InHoaDon.cshtml
+++ b/Test02/Views/GiaoHang/InHoaDon.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "InPhieuXuatKho";
+    ViewBag.Title = "InHoaDon";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
 }
 
-<h2>InPhieuXuatKho</h2>
+<h2>InHoaDon</h2>
 
