--- a/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
@@ -22,6 +22,7 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.MaPT)
+                    @Html.HiddenFor(model => model.TrongTai)
                     <p>
                         <strong>Mã phương tiện: </strong>
                         @Html.DisplayFor(modelItem => Model.MaPT)
